v0.5.0/_sources/tutorials/frames.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/frames.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_frames.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_frames.py:


Frames, ticks, titles, and labels
=================================

Setting the style of the map frames, ticks, etc, is handled by the ``frame``
parameter that all plotting methods of :class:`pygmt.Figure`.

.. GENERATED FROM PYTHON SOURCE LINES 8-11

.. code-block:: default


    import pygmt








.. GENERATED FROM PYTHON SOURCE LINES 13-18

Plot frame
----------

By default, PyGMT does not add a frame to your plot. For example, we can plot
the coastlines of the world with a Mercator projection:

.. GENERATED FROM PYTHON SOURCE LINES 18-23

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(shorelines="1/0.5p", region=[-180, 180, -60, 60], projection="M25c")
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_001.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 24-26

To add the default GMT frame to the plot, use ``frame="f"`` in
:meth:`pygmt.Figure.basemap` or any other plotting module:

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(shorelines="1/0.5p", region=[-180, 180, -60, 60], projection="M25c")
    fig.basemap(frame="f")
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_002.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 33-38

Ticks and grid lines
--------------------

The automatic frame (``frame=True`` or ``frame="a"``) sets the default GMT
style frame and automatically determines tick labels from the plot region.

.. GENERATED FROM PYTHON SOURCE LINES 38-44

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(shorelines="1/0.5p", region=[-180, 180, -60, 60], projection="M25c")
    fig.basemap(frame="a")
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_003.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 45-46

Add automatic grid lines to the plot by adding a ``g`` to ``frame``:

.. GENERATED FROM PYTHON SOURCE LINES 46-52

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(shorelines="1/0.5p", region=[-180, 180, -60, 60], projection="M25c")
    fig.basemap(frame="ag")
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_004.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 53-59

Title
-----

The figure title can be set by passing **+t**\ *title* to the ``frame``
parameter of :meth:`pygmt.Figure.basemap`. Passing multiple arguments to
``frame`` can be done by using a list, as show in the example below.

.. GENERATED FROM PYTHON SOURCE LINES 59-66

.. code-block:: default


    fig = pygmt.Figure()
    # region="IS" specifies Iceland using the ISO country code
    fig.coast(shorelines="1/0.5p", region="IS", projection="M25c")
    fig.basemap(frame=["a", "+tIceland"])
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_005.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 67-71

To use a title with multiple words, the title must be placed inside another
set of quotation marks. To prevent the quotation marks from appearing in the
figure title, the ``frame`` parameter can be passed in single quotation marks
and the title can be passed in double quotation marks.

.. GENERATED FROM PYTHON SOURCE LINES 71-78

.. code-block:: default


    fig = pygmt.Figure()
    # region="TT" specifies Trinidad and Tobago
    fig.coast(shorelines="1/0.5p", region="TT", projection="M25c")
    fig.basemap(frame=["a", '+t"Trinidad and Tobago"'])
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_frames_006.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 79-93

Axis labels
-----------

Axis labels can be set by passing **x+l**\ *label* (or starting with **y** if
labeling the y-axis) to the ``frame`` parameter of
:meth:`pygmt.Figure.basemap`. By default, all 4 map boundaries (or plot axes)
are plotted with both tick marks and axis labels. The axes are named as
**W** (west/left), **S** (south/bottom), **N** (north/top), and
**E** (east/right) sides of a figure. If an upper-case axis name is passed,
the axis is plotted with tick marks and axis labels. A lower case axis name
plots only the axis and tick marks.

The example below uses a Cartesian projection, as GMT does not allow axis
labels to be set for geographic maps.

.. GENERATED FROM PYTHON SOURCE LINES 93-104

.. code-block:: default


    fig = pygmt.Figure()
    fig.basemap(
        region=[0, 10, 0, 20],
        projection="X10c/8c",
        # Plot axis, tick marks, and axis labels on the west/left and south/bottom
        # axes
        # Plot axis and tick marks on the north/top and east/right axes
        frame=["WSne", "xaf+lx-axis", "yaf+ly-axis"],
    )
    fig.show()



.. image-sg:: /tutorials/images/sphx_glr_frames_007.png
   :alt: frames
   :srcset: /tutorials/images/sphx_glr_frames_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  9.654 seconds)


.. _sphx_glr_download_tutorials_frames.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: frames.py <frames.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: frames.ipynb <frames.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
